# LTSS_20251_Team1

./: README.md
sift-cpp_omp/src/: image.cpp  main.cpp  sift.cpp
sift-cpp_omp/src_benchmark/: image.cpp  image.hpp  main.cpp  sift.cpp  sift.hpp
sift-cpp_opencl/: CMakeLists.txt  note.md  note_kernel.md
sift-cpp_opencl/examples/: CMakeLists.txt  find_keypoints.cpp  match_features.cpp
sift-cpp_opencl/libs/: CMakeLists.txt  image.hpp  opencl.hpp  params.hpp  sift.hpp
sift-cpp_opencl/pure_linear/: sift.cpp
sift-cpp_opencl/src/: CMakeLists.txt  image.cpp  opencl.cpp  opencl_global.cpp  sift.cpp
sift-cpp_opencl/src/opencl_kernels/: common_kernel.cl  image_draw_line.cl  image_draw_point.cl  image_gaussian_blur.cl  image_resize.cl  image_tograyscale.cl  image_torgp.cl  sift_descriptor.cl  sift_descriptor.cl.backup  sift_dog_pyramid.cl  sift_find_keypoints.cl  sift_gaussian_pyramid.cl  sift_gradient_pyramid.cl  sift_orientation.cl  sift_refine_keypoints.cl
sift-cpp_origin/src/: run.bat
